prevent overflow on x axis

--- a/frontend/css/source/styles/components/_header.less
+++ b/frontend/css/source/styles/components/_header.less
@@ -60,7 +60,7 @@ header {
 @media (max-width: @screen__m) {
     body {
         &.open-menu {
-            position: fixed;
+            overflow-y: hidden;
 
             &:after {
                 content: "''";
@@ -111,7 +111,7 @@ header {
 
     .navigation-wrapper {
         visibility: hidden;
-        position: absolute;
+        position: fixed;
         transform: translateX(100%);
         transition-duration: 200ms;
         padding: 25px 150px 25px 50px;
